fix (align to center)

--- a/src/components/FavoritesList/FavoritesList.module.css
+++ b/src/components/FavoritesList/FavoritesList.module.css
@@ -1,3 +1,5 @@
+.favoritesList,
 .text {
-  text-align: center;
+  padding-top: 106px;
+  padding-left: 128px;
 }
