--- a/src/components/HeaderRegistration/HeaderRegistration.module.css
+++ b/src/components/HeaderRegistration/HeaderRegistration.module.css
@@ -1,6 +1,6 @@
 .contRout {
   display: flex;
-  padding: 20px 0 20px 380px;
+  padding: 20px 0 20px 128px;
   align-items: center;
 }
 
