--- a/src/components/TeacherFilterForm/TeacherFilterForm.module.css
+++ b/src/components/TeacherFilterForm/TeacherFilterForm.module.css
@@ -1,7 +1,7 @@
 .contFilter {
   display: flex;
   gap: 20px;
-  padding-left: 365px;
+  padding-left: 128px;
   margin-bottom: 32px;
 }
 
