--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+#root {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: #121417;
