--- a/src/pages/Favorites/Favorites.module.css
+++ b/src/pages/Favorites/Favorites.module.css
@@ -1,4 +1,4 @@
 .contFavoritesTeachers {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
