--- a/src/pages/HomeRegistration/HomeRegistration.module.css
+++ b/src/pages/HomeRegistration/HomeRegistration.module.css
@@ -4,7 +4,6 @@
 
 .homeImg {
   display: flex;
-  justify-content: center;
   gap: 24px;
   margin-bottom: 24px;
 }
@@ -90,7 +89,7 @@
 .teacherProfile {
   display: flex;
 
-  margin: 0 auto;
+  /* margin: 0 auto; */
   border-radius: 30px;
   width: 1312px;
   height: 116px;
