--- a/src/pages/Teachers/Teachers.module.css
+++ b/src/pages/Teachers/Teachers.module.css
@@ -1,4 +1,3 @@
 .contTeachersPage {
-  display: block;
-  padding-bottom: 25px;
+  padding-bottom: 96px;
 }
